# health-predictions

./: # data_loader.py  .gitignore  README.md  data_loader.py  odk.toml  project.yml  pyproject.toml  requirements.txt
.deployed/: versions.json
.github/workflows/: main.yml  python-test.yml
notebooks/: anthropometry_trajectories.ipynb  data-update.R  etl.ipynb  etl_deterioration.ipynb  infer.ipynb  notebook_utils.py
taimaka_health_predictions/inference/: __main__.py  etl.py  etl_deterioration.py  infer.py  requirements.txt  run.py  util.py
taimaka_health_predictions/train/: column_desc.csv  requirements.txt  train_muac_loss_2_weeks_consecutive.ipynb  train_new_onset_medical_complication.ipynb  train_nonresponse.ipynb  train_poor_weight_gain.ipynb  train_status_dead.ipynb
taimaka_health_predictions/utils/: digitalocean.py  globals.py  trajectories.py
tests/: __init__.py  test_util.py  util.py  util_test.py
to_archive/: data-update.R  etl.ipynb  etl_deterioration.ipynb  infer.ipynb
train/: train_new_onset_medical_complication.ipynb
